Commenting and new chapter

--- a/main.tex
+++ b/main.tex
@@ -25,10 +25,14 @@
 \end{titlepage}
 \pagebreak
 % --------------------------------------------------------------------------
-% ---------------------- Acknowledgments -----------------------------------
-\frontmatter
+% ---------------------- Before the formal content  ------------------------
+\frontmatter{}
 \include{chapters/acknowledgments}
 \tableofcontents{}
 \include{chapters/abstract}
+% --------------------------------------------------------------------------
+% ---------------------- The formal content  -------------------------------
+\mainmatter{}
+\include{chapters/introduction}
 % --------------------------------------------------------------------------
 \end{document}
