introduction and chapter 2

--- a/content/main.tex
+++ b/content/main.tex
@@ -34,5 +34,6 @@
 % ---------------------- The formal content  -------------------------------
 \mainmatter{}
 \include{chapters/introduction}
+\include{chapters/cube-structure}
 % --------------------------------------------------------------------------
 \end{document}
