--- a/content/preamble.tex
+++ b/content/preamble.tex
@@ -1,4 +1,9 @@
-% Numbers here clearly will get changed.
 \usepackage{geometry}
 \usepackage{setspace}
 \usepackage{caption}
+\usepackage{graphicx,wrapfig}
+% Include the drawing library.
+\usepackage{tikz}
+% Not sure if this line will be keeped. (Include the cube package.)
+
+\usepackage{rubikcube,rubikrotation,rubikpatterns}
