--- a/content/main.tex
+++ b/content/main.tex
@@ -1,5 +1,9 @@
 % Set up the document class.
-\documentclass[letterpaper,oneside,12pt]{book}
+\documentclass[
+  letterpaper,
+  oneside,
+  12pt
+]{book}
 % Include the preambles, i.e. the packages I need.
 \include{preamble}
 % Start of the document.
