--- a/content/preamble.tex
+++ b/content/preamble.tex
@@ -1,7 +1,17 @@
-\usepackage{geometry}
+\usepackage[
+  centering,
+  includehead,
+  includefoot,
+  total={6in,9in},
+  bindingoffset=0.5in
+]{geometry}
 \usepackage{setspace}
 \usepackage{caption}
-\usepackage{graphicx,wrapfig}
+\usepackage{wrapfig}
+\usepackage{graphicx}
+\usepackage{fontawesome}
+% Uncomment this line if decided adding indent to first paragraphs.
+% \usepackage{indentfirst}
 % Include the drawing library.
 \usepackage{tikz}
 % Not sure if this line will be keeped. (Include the cube package.)
