--- a/content/preamble.tex
+++ b/content/preamble.tex
@@ -8,7 +8,7 @@
   bindingoffset=0.5in
 ]{geometry}
 % --------------------------------------------------------------------------
-% Language and font encodings
+% Language and font encoding.
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{csquotes}
@@ -20,7 +20,7 @@
 \usepackage{setspace}
 \usepackage{graphicx}
 \usepackage{fontawesome}
-% An easy way to draw rubik's cubes. Notice this must be places after tikz.
+% An easy way to draw Rubik's cubes. Notice this must be places after tikz.
 \usepackage{rubikcube,rubikrotation,rubikpatterns}
 % --------------------------------------------------------------------------
 % Useful mathematics packages.
@@ -30,10 +30,10 @@
 \usepackage{mathtools}
 % --------------------------------------------------------------------------
 % Define useful theorem environments.
-\newtheorem{definition}{Definition}[chapter]
-\newtheorem{theorem}{Theorem}[chapter]
-\newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{example}{Example}[chapter]
+\newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{definition}{Definition}[chapter]
+\newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}[theorem]{Corollary}
 % --------------------------------------------------------------------------
 % This will be removed at the end of the thesis.
